(executable
  (name main)
  (preprocess (pps ppx_blob))
  (preprocessor_deps (file slang.spv))
  (libraries fmt olivine eio_main wayland wayland.protocols logs.fmt drm vulkan cairo2))

(rule
  (target slang.spv)
  (action
    (run slangc %{dep:shader.slang}
         -target spirv
         -profile spirv_1_4
         -emit-spirv-directly
         -fvk-use-entrypoint-name
         -entry vertMain
         -entry fragMain
         -o %{target})))
