(executable
  (name main)
  (preprocess (pps ppx_blob))
  (preprocessor_deps (file landscape.spv) (file ship.spv))
  (libraries fmt olivine eio_main wayland wayland.protocols logs.fmt libdrm vulkan libinput))

(rule
  (target ship.spv)
  (deps (file ubo.slang))
  (action
    (run slangc %{dep:ship.slang}
         -target spirv
         -profile spirv_1_4
         -emit-spirv-directly
         -fvk-use-entrypoint-name
         -entry vertShip
         -entry fragShip
         -o %{target})))

(rule
  (target landscape.spv)
  (deps (file ubo.slang))
  (action
    (run slangc %{dep:landscape.slang}
         -target spirv
         -profile spirv_1_4
         -emit-spirv-directly
         -fvk-use-entrypoint-name
         -entry vertLandscape
         -entry fragLandscape
         -o %{target})))
