(executable
  (name main)
  (preprocess (pps ppx_blob))
  (preprocessor_deps (file landscape.spv) (file ship.spv) (file particles.spv))
  (libraries fmt olivine eio_main wayland wayland.protocols logs.fmt libdrm vulkan gbm libinput seat))

(rule
  (target ship.spv)
  (deps (file ubo.slang))
  (action
    (run slangc %{dep:ship.slang}
         -target spirv
         -profile spirv_1_4
         -emit-spirv-directly
         -fvk-use-entrypoint-name
         -entry vertShip
         -entry fragShip
         -o %{target})))

(rule
  (target landscape.spv)
  (deps (file ubo.slang))
  (action
    (run slangc %{dep:landscape.slang}
         -target spirv
         -profile spirv_1_4
         -emit-spirv-directly
         -fvk-use-entrypoint-name
         -entry vertLandscape
         -entry fragLandscape
         -o %{target})))

(rule
  (target particles.spv)
  (deps (file ubo.slang))
  (action
    (run slangc %{dep:particles.slang}
         -target spirv
         -profile spirv_1_4
         -emit-spirv-directly
         -fvk-use-entrypoint-name
         -entry vertMain
         -entry fragMain
         -o %{target})))
